initial visual updates

--- a/src/_includes/head/preloads.njk
+++ b/src/_includes/head/preloads.njk
@@ -1,18 +1,35 @@
 <link
   rel="preload"
-  href="/assets/fonts/redhat/red-hat-display-v7-latin-900.woff2"
+  href="/assets/fonts/heldane/HeldaneDisplayWeb-Regular.woff"
   as="font"
-  type="font/woff2"
+  type="font/woff"
   crossorigin
 />
 
 <link
   rel="preload"
-  href="/assets/fonts/atkinson/atkinson-hyperlegible-regular.woff2"
+  href="/assets/fonts/heldanetext/HeldaneTextWeb-Regular.woff"
   as="font"
-  type="font/woff2"
+  type="font/woff"
   crossorigin
 />
+
+<link
+  rel="preload"
+  href="/assets/fonts/heldanetext/HeldaneTextWeb-RegularItalic.woff"
+  as="font"
+  type="font/woff"
+  crossorigin
+/>
+
+<link
+  rel="preload"
+  href="/assets/fonts/foundersmono/FoundersGroteskMonoWeb-Regular.woff"
+  as="font"
+  type="font/woff"
+  crossorigin
+/>
+
 
 <!-- preloads in page data -->
 {%- if preloads -%}
