--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -5,7 +5,7 @@
     <a href="/" class="logo | cluster" {{ indicateActiveHome }}>
       {% svg "misc/star" %}
 
-      <span class="font-display">{{ meta.siteName }}</span>
+      <span class="font-text italic ss10">{{ meta.siteName }}</span>
     </a>
     {% include "partials/main-nav.njk" %}
   </div>
