--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -21,19 +21,15 @@ blog:
 
   <article class="full | region">
     <div class="wrapper flow prose">
-      <h2 id="an-eleventy-starter">An Eleventy starter</h2>
+      <h2 id="an-eleventy-starter">Welcome</h2>
       <p>
-        Built around a CSS workflow that emphasizes guiding browser styling rather than micromanaging it. It
-        incorporates progressive enhancement, fluid type and spacing, and utilizes modern CSS features for
-        layout. The goal is to develop frontends that provide a great experience across all devices,
-        connection speeds, and usage contexts.
+        You've stumbled onto the Apologetics Atlas, a subset of my analog zettelkasten that I'm publishing online to share what I'm learning with others who want to learn about Christian doctrine and apologetics.
       </p>
       <p>
-        <strong>This is <a href="https://github.com/madrilene/eleventy-excellent/">version 4</a>.</strong> I keep a
-        <a href="https://github.com/madrilene/eleventy-excellent/tree/v1">branch of v1</a>,
-        <a href="https://github.com/madrilene/eleventy-excellent/tree/v2">v2</a> and <a href="https://github.com/madrilene/eleventy-excellent/tree/v3">v3</a>. I  tried to <a href="/get-started/#docs-lol">document most features and methodologies</a>.
+        <strong>There are 3 ways to explore this site:</strong> Search the: <a href="/index/">Index</a>,
+        <a href="/blog/">Main Note Box</a>, or <a href="/bibliography/">Bibliography</a>.
       </p>
-      <p><strong>Have fun</strong> and let me know if you find any issues or have ideas for improvements!</p>
+      <p><strong>Have fun exploring</strong> and let me know if you find any issues or have ideas for improvements!</p>
     </div>
   </article>
 
