--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -26,7 +26,7 @@ blog:
         You've stumbled onto the Apologetics Atlas, a subset of my analog zettelkasten that I'm publishing online to share what I'm learning with others who want to learn about Christian doctrine and apologetics.
       </p>
       <p>
-        <strong>There are 3 ways to explore this site:</strong> Search the: <a href="/index/">Index</a>,
+        <strong>There are 3 ways to explore this site:</strong> Search the: <a href="/noteindex/">Index</a>,
         <a href="/blog/">Main Note Box</a>, or <a href="/bibliography/">Bibliography</a>.
       </p>
       <p><strong>Have fun exploring</strong> and let me know if you find any issues or have ideas for improvements!</p>
