Font update to Soehne and Financier

--- a/src/_includes/head/preloads.njk
+++ b/src/_includes/head/preloads.njk
@@ -1,32 +1,15 @@
 <link
   rel="preload"
-  href="/assets/fonts/heldane/HeldaneDisplayWeb-Regular.woff"
+  href="/assets/fonts/financier/financier-display-light.woff2"
   as="font"
-  type="font/woff"
+  type="font/woff2"
   crossorigin
 />
-
 <link
   rel="preload"
-  href="/assets/fonts/heldanetext/HeldaneTextWeb-Regular.woff"
+  href="/assets/fonts/soehne/soehne-buch.woff2"
   as="font"
-  type="font/woff"
-  crossorigin
-/>
-
-<link
-  rel="preload"
-  href="/assets/fonts/heldanetext/HeldaneTextWeb-RegularItalic.woff"
-  as="font"
-  type="font/woff"
-  crossorigin
-/>
-
-<link
-  rel="preload"
-  href="/assets/fonts/foundersmono/FoundersGroteskMonoWeb-Regular.woff"
-  as="font"
-  type="font/woff"
+  type="font/woff2"
   crossorigin
 />
 
