--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,10 +1,10 @@
 ---
 layout: base
 permalink: /index.html
-title: 'Explore Apologetics'
+title: 'Raising the QA Standard'
 description: 'Eleventy starter using modern CSS, fluid type, fluid spacing, flexible layout and progressive enhancement.'
 blog:
-  title: 'Main Note Box'
+  title: 'Blog'
   intro: "These are the main notes in this digital zettelkasten. Choose one to get started, or go to the Index page to choose a section to explore."
 ---
 
