minor font adjustment

--- a/src/_includes/head/preloads.njk
+++ b/src/_includes/head/preloads.njk
@@ -12,7 +12,20 @@
   type="font/woff2"
   crossorigin
 />
-
+<link
+  rel="preload"
+  href="/assets/fonts/soehne/soehne-kraftig.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/assets/fonts/soehne/soehne-breit-buch.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
 
 <!-- preloads in page data -->
 {%- if preloads -%}
