editing home body text

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -4,8 +4,8 @@ permalink: /index.html
 title: 'Raising the QA Standard'
 description: 'Eleventy starter using modern CSS, fluid type, fluid spacing, flexible layout and progressive enhancement.'
 blog:
-  title: 'Blog'
-  intro: "These are the main notes in this digital zettelkasten. Choose one to get started, or go to the Index page to choose a section to explore."
+  title: 'Tutorials'
+  intro: "Tutorials and ideas to help you excel in QA"
 ---
 
 <div class="wrapper">
@@ -23,13 +23,11 @@ blog:
     <div class="wrapper flow prose">
       <h2 id="an-eleventy-starter">Welcome</h2>
       <p>
-        You've stumbled onto the Apologetics Atlas, a subset of my analog zettelkasten that I'm publishing online to share what I'm learning with others who want to learn about Christian doctrine and apologetics.
+        Hi, I'm Jonathan S.
       </p>
       <p>
-        <strong>There are 3 ways to explore this site:</strong> Search the: <a href="/noteindex/">Index</a>,
-        <a href="/blog/">Main Note Box</a>, or <a href="/bibliography/">Bibliography</a>.
+        I'm a Product QA Supervisor and I lead a growing team of 15 QA testers that test hundreds of defects a month. I'm sharing what I learn here to help others raise the QA Standard.
       </p>
-      <p><strong>Have fun exploring</strong> and let me know if you find any issues or have ideas for improvements!</p>
     </div>
   </article>
 
