organizational content edits

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -3,9 +3,8 @@
 
   <div class="repel ontop gutter-s">
     <a href="/" class="logo | cluster" {{ indicateActiveHome }}>
-      {% svg "misc/star" %}
-
-      <span class="font-text italic ss10">{{ meta.siteName }}</span>
+      {# {% svg "misc/star" %} #}
+      <span>{{ meta.siteName }}</span>
     </a>
     {% include "partials/main-nav.njk" %}
   </div>
