--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Main Notes
+title: Tutorials
 description: 'All blog posts can be found here'
 pagination:
   data: collections.allPosts
