--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,32 +1,33 @@
 ---
 layout: base
 permalink: /index.html
-title: 'Raising the QA Standard'
+title: 'Your Zettelkasten, Your Personal Idea Machine.'
 description: 'Eleventy starter using modern CSS, fluid type, fluid spacing, flexible layout and progressive enhancement.'
 blog:
-  title: 'Tutorials'
-  intro: "Tutorials and ideas to help you excel in QA"
+  title: '👇 Start Here'
+  intro: "Dive in and grow your ideas with every post."
 ---
 
 <div class="wrapper">
   <header class="full | section" style="--spot-color: var(--color-primary)">
-      {% svg "divider/soft-top", null, "seperator" %}
 
     <div class="section__inner flow region">
       <h1 class="text-center" style="color: var(--color-light);">{{ title }}</h1>
     </div>
 
-    {% svg "divider/soft-bottom", null, "seperator" %}
   </header>
 
   <article class="full | region">
     <div class="wrapper flow prose">
-      <h2 id="an-eleventy-starter">Welcome</h2>
+      <h2 id="an-eleventy-starter">👋 Welcome</h2>
       <p>
-        Hi, I'm Jonathan S.
+        Life is messy. Work is busy. Your brain is full.<br>
+        Your Zettelkasten? That’s your ally.<br>
+        It connects your thoughts, sparks new ideas, and turns everyday notes into your personal think-tank.<br>
       </p>
       <p>
-        I'm a Product QA Supervisor and I lead a growing team of 15 QA testers that test hundreds of defects a month. I'm sharing what I learn here to help others raise the QA Standard.
+        This blog? It’s your guide.<br>
+        To building it. Using it. Growing with it.<br>
       </p>
     </div>
   </article>
