--- a/src/_includes/head/preloads.njk
+++ b/src/_includes/head/preloads.njk
@@ -1,6 +1,27 @@
 <link
   rel="preload"
-  href="/assets/fonts/financier/financier-display-light.woff2"
+  href="/assets/fonts/gt-alpina/GT-Alpina-Standard-Regular.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/assets/fonts/gt-alpina/GT-Alpina-Standard-Regular-Italic.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/assets/fonts/pitch/PitchSansWeb-Medium.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/assets/fonts/pitch/PitchSansWeb-MediumItalic.woff2"
   as="font"
   type="font/woff2"
   crossorigin
